# Comic-Baba

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: baseline.yaml  eval.yaml
docs/: DATA_FORMAT.md  EXPERIMENTS.md  PIPELINE.md  RESOURCES.md  TASKS.md
inputs/: README.md
notebooks/: train_interpolator.ipynb
scripts/: ingest_sample.py  make_tiny_sample.py  run_eval.py  run_infer.py  run_prepare.py  run_train.py  run_ui.py
src/comic_baba/: __init__.py  cli.py  constants.py
src/comic_baba/data/: __init__.py  dataset.py  transforms.py
src/comic_baba/eval/: __init__.py  metrics_identity.py  metrics_quality.py  metrics_temporal.py
src/comic_baba/io/: __init__.py  frames.py  manifest.py  validators.py  video.py
src/comic_baba/models/: __init__.py
src/comic_baba/models/interpolators/: __init__.py  base.py  baseline_blend.py  rife.py
src/comic_baba/models/stabilizers/: __init__.py  base.py  identity_lock_placeholder.py  temporal_smoothing_placeholder.py
src/comic_baba/pipelines/: __init__.py  evaluation.py  inference.py  prepare_data.py  train.py
src/comic_baba/utils/: __init__.py  config.py  logging.py  seed.py  viz.py
tests/: test_interpolation_training.py  test_smoke_pipeline.py
